src/poi/Deployments/azure_vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi-new
  template:
    metadata:
      labels:
        app: poi-new
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: poinew
        image: registryjkr9241.azurecr.io/tripinsights/poi
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: poi-new
