src/poi/Deployments/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: poi
        image: resources:registryjkr9241.azurecr.io/tripinsights/poi
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: poi
