src/poi/Deployments/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: poi
  namespace: apinamespace
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryjkr9241.azurecr.io/tripinsights/poi:1.0
        volumeMounts:                                   # New
        - name: test
          mountPath: /secrets
          readOnly: true
      volumes:
      - name: test
        flexVolume:
          driver: "azure/kv"
          secretRef:
            name: kvcreds
          options:
            keyvaultname: "T5KV"                      # [REQUIRED] the name of the KeyVault
            keyvaultobjectnames: "SQLDBNAME;SQLUSER;SQLPASSWORD;SQLSERVER"         # [REQUIRED] list of KeyVault object names (semi-colon separated)
            keyvaultobjectaliases: "SQL_DBNAME;SQL_USER;SQL_PASSWORD;SQL_SERVER"      # [OPTIONAL] list of KeyVault object aliases
            keyvaultobjecttypes: secret;secret;secret;secret               # [REQUIRED] list of KeyVault object types: secret, key, cert (semi-colon separated)
            resourcegroup: "teamResources"            # [REQUIRED for version < v0.0.14] the resource group of the KeyVault
            subscriptionid: "23627e20-0bb6-49b8-bf36-1bba2cdea96a"                 # [REQUIRED for version < v0.0.14] the subscription ID of the KeyVault
            tenantid: "d26ef59e-ceb7-4b29-a1d1-ecdb3e3da6fa"                    # [REQUIRED] the tenant ID of the KeyVault
        ports:
         - containerPort: 80
      imagePullSecrets:
         - name: acr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: apinamespace
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: poi
